--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.14"
   }
 }
